--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,11 @@
     -webkit-text-fill-color: transparent;
 }
 
+@media (min-width: 320px) and (max-width: 375px){
+    .nav-tab{
+        display: none;
+    }
+}
 @media (max-width:320px){
     .nav-tab{
         display: none;
